--- a/realsense2_camera/package.xml
+++ b/realsense2_camera/package.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <package format="2">
   <name>realsense2_camera</name>
-  <version>2.2.17</version>
+  <version>2.2.14</version>
   <description>RealSense Camera package allowing access to Intel T265 Tracking module and SR300 and D400 3D cameras</description>
   <maintainer email="sergey.dorodnicov@intel.com">Sergey Dorodnicov</maintainer>
   <maintainer email="doron.hirshberg@intel.com">Doron Hirshberg</maintainer>
@@ -24,9 +24,13 @@
   <depend>std_msgs</depend>
   <depend>message_runtime</depend>
   <depend>tf</depend>
+  <depend>roslib</depend>
   <depend>ddynamic_reconfigure</depend>
   <depend>diagnostic_updater</depend>
   <depend>librealsense2</depend>
+  <depend>rosbag</depend>
+  <depend>message_generation</depend>
+
   <export>
     <nodelet plugin="${prefix}/nodelet_plugins.xml" />
   </export>
